--- a/imgapi/src/main/resources/application-dev.properties
+++ b/imgapi/src/main/resources/application-dev.properties
@@ -2,3 +2,5 @@ logging.level.org.springframework=WARN
 logging.level.root=WARN
 logging.level.pl=DEBUG
 spring.datasource.url=jdbc:postgresql://localhost:15432/imgsvc_dev?user=postgres&password=postgres
+server.port=8081
+management.endpoints.web.exposure.include=*
