--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,4 +4,4 @@ spring:
   profiles:
     active: default
   config:
-    import: optional:configserver:http://localhost:9001
+    import: optional:configserver:${CONFIG_SERVER}
