--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,6 @@ spring:
   application:
     name: api
   profiles:
-    active: default
+    active: local
   config:
     import: optional:configserver:${CONFIG_SERVER}
