--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,10 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -99,5 +103,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
