--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,14 @@
 		<spring-cloud.version>2021.0.1</spring-cloud.version>
 		<spring-boot.version>${project.parent.version}</spring-boot.version>
 	</properties>
+
 	<dependencies>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.24</version>
+			<scope>provided</scope> 
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jdbc</artifactId>
@@ -117,10 +124,18 @@
 	</dependencyManagement>
 
 	<build>
+
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<!-- <annotationProcessorPaths>
+					<path>
+						<groupId>org.projectlombok</groupId>
+						<artifactId>lombok</artifactId>
+						<version>1.18.24</version>
+					</path>
+				</annotationProcessorPaths> -->
 			</plugin>
 		</plugins>
 	</build>
